<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".activities.HalamanUtamaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/Tex"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/Tex"
                android:text="@string/register"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>