<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect"
    android:orientation="vertical"
    android:layout_marginHorizontal="1dp"
    card_view:cardCornerRadius="1dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="80dp">

<!--                <com.android.volley.toolbox.NetworkImageView-->
<!--                    android:id="@+id/imageMenu"-->
<!--                    android:layout_width="72dp"-->
<!--                    android:layout_height="62dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/logo"-->
<!--                    android:contentDescription="@string/todo"/>-->

                <ImageView
                    android:id="@+id/imageMenu"
                    android:layout_width="72dp"
                    android:layout_height="62dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/todo" />

            </FrameLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/tvNamaMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/nasi_goreng_hijau"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/layoutDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNamaMenu"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvHargaCoret"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_25_000"
                    android:textColor="@color/Tex"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/_30"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutDiscount"
                android:gravity="center|left"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/tvHargaMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_25_000"
                    android:textColor="@color/Tex"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="16dp"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgLoveBlack"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/ic_love_black" />

                <TextView
                    android:id="@+id/tvJmlFavorit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textColor="@color/textSub"
                    android:textSize="11sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvKetersedian"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:text="@string/tidak_tersedia"
                android:gravity="center"
                android:textColor="@color/textSub"
                android:layout_marginBottom="5dp"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/imgLove"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/tvKetersedian"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colordevider"/>
</androidx.cardview.widget.CardView>