<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.SigningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="39dp"
                android:layout_marginTop="65dp"
                android:layout_marginStart="15dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="MissingConstraints"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:text="@string/masukkan_nomor_telepon"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/_62"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@null"
                android:layout_marginTop="15dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="15"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:background="@color/black"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="70dp"
                android:backgroundTint="@color/Tex"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ProgressBar
                android:id="@+id/progressBarSigning"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:backgroundTint="@color/Tex"
                android:indeterminateDrawable="@drawable/prograss_color"
                tools:layout_editor_absoluteX="173dp"
                tools:layout_editor_absoluteY="506dp" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>