<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context=".activities.RegistasiActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:ignore="MissingConstraints"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="60dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/iconcolour">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="Nama : "/>


                        <EditText
                            android:id="@+id/kolomNama"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="55dp"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="30"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/iconcolour">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/_62"/>

                        <EditText
                            android:id="@+id/kolomNomor"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="45dp"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="30"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            />
                    </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/iconcolour">

                    <EditText
                        android:id="@+id/kolomEmail"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:hint="@string/alamat_email"
                        android:maxLength="30"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:gravity="center"
                    android:backgroundTint="@color/Tex"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>

            <Button
                android:id="@+id/buttonMasuk"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:backgroundTint="@color/Tex"
                android:text="Login"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

<!--    <?xml version="1.0" encoding="utf-8"?>-->
        <!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:mask="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/coordinatorLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical">-->

        <!--<RelativeLayout-->
        <!--    android:layout_width="match_parent"-->
        <!--    android:layout_height="match_parent"-->
        <!--    android:padding="5dp">-->

        <!--    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
        <!--        android:id="@+id/cardView"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_alignParentTop="true"-->
        <!--        android:layout_marginHorizontal="4dp"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        card_view:cardCornerRadius="1dp">-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical"-->
        <!--            android:padding="6dp">-->

        <!--            <customfonts.MyTextView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginBottom="10dp"-->
        <!--                android:text="Data Pengguna"-->
        <!--                android:textColor="@color/Tex" />-->

        <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <customfonts.MyEditText-->
        <!--                    android:id="@+id/editTextNama"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:hint="Nama"-->
        <!--                    android:inputType="textPersonName"-->
        <!--                    android:lines="1"-->
        <!--                    android:maxLines="1"-->
        <!--                    />-->

        <!--            </com.google.android.material.textfield.TextInputLayout>-->

        <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <EditText-->
        <!--                    android:id="@+id/editTextPhone"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_below="@+id/imageView"-->
        <!--                    android:inputType="number"-->
        <!--                    android:typeface="monospace"-->
        <!--                    android:hint="+62-" />-->
        <!--            </com.google.android.material.textfield.TextInputLayout>-->

        <!--            <com.google.android.material.textfield.TextInputLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content">-->

        <!--                <customfonts.MyEditText-->
        <!--                    android:id="@+id/editTextEmail"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:hint="Alamat Email"-->
        <!--                    android:inputType="textEmailAddress" />-->

        <!--            </com.google.android.material.textfield.TextInputLayout>-->

        <!--        </LinearLayout>-->
        <!--    </androidx.cardview.widget.CardView>-->

        <!--    <Button-->
        <!--        android:id="@+id/buttonSignUp"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="60dp"-->
        <!--        android:layout_below="@id/cardView"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:text="Register"-->
        <!--        android:textAllCaps="false"-->
        <!--        android:textColor="@color/White" />-->

        <!--</RelativeLayout>-->


        <!--<TextView-->
        <!--    android:id="@+id/textSignIn"-->
        <!--    android:layout_width="wrap_content"-->
        <!--    android:layout_height="wrap_content"-->
        <!--    android:layout_gravity="bottom|center"-->
        <!--    android:layout_margin="20dp"-->
        <!--    android:text="Masuk"-->
        <!--    android:textColor="@color/colorPrimaryDark"-->
        <!--    android:textStyle="bold" />-->

        <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->